# fem-em-solver

./: .gitignore  404.html  LICENSE  PROJECT_PLAN.md  README.md  ROADMAP.md  bootstrap_pending_tests.sh  index.html  mkdocs.yml  pyproject.toml  run_example.sh  run_examples.sh  run_tests.sh
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: index.md  status.md  testing_manual_checklist.md
docs/ports/: human_port_calibration_checklist.md
docs/testing/: README.md  pending-tests.md  test-results.md  tolerance-policy.md  v1_acceptance_checklist.md
docs/validation/: helmholtz.md
examples/magnetostatics/: 01_straight_wire.py  02_circular_loop.py  03_helmholtz_coil.py  COMBINED_XDMF_README.md  MESH_DIAGNOSTIC_GUIDE.md  PARAVIEW_GUIDE.md  PARAVIEW_VALIDATION_GUIDE.md
examples/mri/: 01_coil_phantom_fields.py
ports/human_port_calibration_checklist/: index.html
scripts/: build_docs.sh  run_examples.sh  run_tests.sh
scripts/testing/: preflight.sh  run_and_log.sh  run_pending_tests.sh
search/: search_index.json
src/: sitecustomize.py
src/fem_em_solver/: __init__.py
status/: index.html
testing/: index.html
testing/pending-tests/: index.html
testing/test-results/: index.html
testing/tolerance-policy/: index.html
testing/v1_acceptance_checklist/: index.html
testing_manual_checklist/: index.html
tests/: conftest.py  tolerances.py
tests/io/: test_mesh_qa_diagnostics.py  test_touchstone_export.py
tests/materials/: test_phantom_material_model.py
tests/mesh/: helpers.py  test_birdcage_port_tags.py  test_coil_phantom_mesh.py  test_cylindrical_domain.py  test_domain_sizing_heuristics.py  test_geometry_sanity_report.py  test_mesh_tag_integrity.py  test_region_resolution_policy.py
tests/ports/: test_frequency_sweep_planner.py  test_port_definition.py  test_port_orientation_sensitivity.py  test_sparameter_assembly.py
tests/post/: test_phantom_field_metrics.py  test_quicklook_report.py
tests/solver/: test_boundary_condition_selection.py  test_coil_phantom_magnetostatics.py  test_convergence_diagnostics.py  test_cylinder.py  test_single_port_excitation.py  test_time_harmonic_smoke.py  test_tolerance_policy.py  test_two_cylinder.py  test_two_torus.py
tests/unit/: test_analytical_lightweight.py
tests/validation/: test_circular_loop.py  test_coil_phantom_bfield_metrics.py  test_convergence.py  test_field_consistency_metrics.py  test_helmholtz.py  test_helmholtz_v2.py  test_straight_wire.py  (+1 more)
(+28 files in other folders)
